[gd_scene load_steps=10 format=3 uid="uid://dn86mejyt6s6i"]

[ext_resource type="Script" path="res://TutorialExperience.gd" id="1_qomhd"]
[ext_resource type="PackedScene" uid="uid://bpc14ktsk2mvk" path="res://Scenes/Experience/SphereXP.glb" id="2_e6n2i"]
[ext_resource type="PackedScene" uid="uid://4m12hcr76fr1" path="res://Scenes/Experience/PyramidXP.glb" id="3_x5tyw"]
[ext_resource type="PackedScene" uid="uid://cow1lld0fkonn" path="res://Scenes/Experience/CubeXP.glb" id="4_uunra"]
[ext_resource type="PackedScene" uid="uid://dhu1rmy81482n" path="res://Scenes/Experience/CilinderXP.glb" id="5_p7xc0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7cmfb"]
size = Vector3(10.5839, 2.56729, 10.6039)

[sub_resource type="Animation" id="Animation_gsovd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Experience:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.233364, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Experience:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Experience:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3, 3, 3)]
}

[sub_resource type="Animation" id="Animation_q5ohe"]
resource_name = "experienceAnimation"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Experience:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.233364, 0), Vector3(0, 0.44645, 0), Vector3(0, 0.27884, 0), Vector3(0, 0.466535, 0), Vector3(0, 0.233364, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Experience:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0), Vector3(0, 3.14159, 0), Vector3(0, 4.71239, 0), Vector3(0, 6.28319, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Experience:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(3, 3, 3), Vector3(3.5, 3.5, 3.5), Vector3(3, 3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3keh"]
_data = {
"RESET": SubResource("Animation_gsovd"),
"experienceAnimation": SubResource("Animation_q5ohe")
}

[node name="TutorialExperience" type="Node3D"]
script = ExtResource("1_qomhd")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 0, 0, 0)
collision_layer = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, 0.0150512, 1.35774, 0.0116234)
shape = SubResource("BoxShape3D_7cmfb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a3keh")
}
autoplay = "experienceAnimation"

[node name="Experience" type="Node3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0.233364, 0)

[node name="SphereXP" parent="Experience" instance=ExtResource("2_e6n2i")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)

[node name="PyramidXP" parent="Experience" instance=ExtResource("3_x5tyw")]

[node name="CubeXP" parent="Experience" instance=ExtResource("4_uunra")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.504597, 0)

[node name="CilinderXP" parent="Experience" instance=ExtResource("5_p7xc0")]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
